--- a/app/src/main/res/layout-w480dp/edit_circle.xml
+++ b/app/src/main/res/layout-w480dp/edit_circle.xml
@@ -56,6 +56,8 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+
+            android:visibility="gone"
     >
         <ImageButton
                 android:id="@+id/circle_texture"
