added toolbar cuztomization into settings + other QoL as per feedback

--- a/app/src/main/res/layout/activity_dodeca_edit.xml
+++ b/app/src/main/res/layout/activity_dodeca_edit.xml
@@ -63,6 +63,7 @@
                 app:contentInsetStartWithNavigation="0dp"
                 app:contentInsetEnd="0dp"
                 app:contentInsetEndWithActions="0dp"
+                app:showWhen="@{viewModel.bottomBarShown}"
                 >
             <LinearLayout
                     android:orientation="vertical"
