--- a/app/src/main/res/layout/toolbar_edit1.xml
+++ b/app/src/main/res/layout/toolbar_edit1.xml
@@ -17,7 +17,7 @@
         <!-- BUG: tool tips are not working -->
         <ImageButton
                 android:id="@+id/done_button"
-                android:src="@drawable/ic_done"
+                android:src="@drawable/ic_edit"
                 app:backgroundTint="@color/editToolbarColor"
                 android:padding="8dp"
                 android:layout_weight="1"
@@ -88,6 +88,8 @@
                 app:tintEnabled="@{viewModel.editingMode == EditingMode.ROTATE_3D}"
                 app:defaultTint="@{@color/editToolbarColor}"
                 app:darkerTint="@{@color/darkerEditToolbarColor}"
+
+                android:visibility="gone"
                 />
         <ImageButton
                 android:id="@+id/navigate_3d_mode_button"
@@ -101,6 +103,8 @@
                 app:tintEnabled="@{viewModel.editingMode == EditingMode.NAVIGATE_3D}"
                 app:defaultTint="@{@color/editToolbarColor}"
                 app:darkerTint="@{@color/darkerEditToolbarColor}"
+
+                android:visibility="gone"
                 />
 
     <ImageButton
