editable rule in edit_circle.xml (only PrimitiveCircles)

--- a/app/src/main/res/layout-w480dp/edit_circle.xml
+++ b/app/src/main/res/layout-w480dp/edit_circle.xml
@@ -4,7 +4,9 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
->
+        android:focusable="true"
+        android:focusableInTouchMode="true"
+        >
     <Switch
             android:id="@+id/circle_show"
             android:layout_width="wrap_content"
@@ -52,8 +54,19 @@
                 android:layout_margin="8dp"
         />
     </LinearLayout>
-<!--    <LinearLayout-->
-<!--            android:orientation="horizontal"-->
+    <EditText
+            android:id="@+id/edit_circle_rule"
+            android:text="@string/ellipsis"
+            android:textSize="@dimen/small_text_size"
+            android:inputType="number"
+            android:digits="0123456789"
+            android:hint="rule"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            />
+    <!--    <LinearLayout-->
+    <!--            android:orientation="horizontal"-->
 <!--            android:layout_width="match_parent"-->
 <!--            android:layout_height="match_parent"-->
 
