--- a/app/src/main/res/layout-w240dp/edit_circle.xml
+++ b/app/src/main/res/layout-w240dp/edit_circle.xml
@@ -4,6 +4,8 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:focusable="true"
+        android:focusableInTouchMode="true"
 >
     <Switch
             android:id="@+id/circle_show"
@@ -58,6 +60,17 @@
                 android:layout_margin="8dp"
         />
     </LinearLayout>
+    <EditText
+            android:id="@+id/edit_circle_rule"
+            android:text="@string/ellipsis"
+            android:textSize="@dimen/small_text_size"
+            android:inputType="number"
+            android:digits="0123456789"
+            android:hint="rule"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            />
 <!--    <LinearLayout-->
 <!--            android:orientation="horizontal"-->
 <!--            android:layout_width="match_parent"-->
