--- a/app/src/main/res/layout/mass_editor_row.xml
+++ b/app/src/main/res/layout/mass_editor_row.xml
@@ -91,23 +91,7 @@
                 app:layout_constraintStart_toEndOf="@id/circle_layout"
                 app:layout_constraintEnd_toStartOf="@id/circle_rule"
         />
-<!--        <TextView-->
-<!--                android:id="@+id/circle_rule"-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:layout_marginTop="8dp"-->
-<!--                app:layout_constraintTop_toTopOf="parent"-->
-<!--                android:layout_marginBottom="8dp"-->
-<!--                app:layout_constraintBottom_toBottomOf="parent"-->
-<!--                app:layout_constraintStart_toEndOf="@id/mass_editor_space"-->
-<!--                app:layout_constraintEnd_toStartOf="@id/expand_group"-->
-<!--                android:layout_marginStart="8dp"-->
-<!--                android:layout_marginEnd="24dp"-->
-<!--                android:text="@string/circle_name_initial_text"-->
-<!--                android:textSize="@dimen/tiny_text_size"-->
-<!--                android:ellipsize="end"-->
-<!--                />-->
-        <EditText
+        <TextView
                 android:id="@+id/circle_rule"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -119,9 +103,7 @@
                 app:layout_constraintEnd_toStartOf="@id/expand_group"
                 android:layout_marginStart="8dp"
                 android:layout_marginEnd="24dp"
-                android:text="@string/circle_name_initial_text"
-                android:inputType="number"
-                android:digits="0123456789"
+                android:text="@string/ellipsis"
                 android:textSize="@dimen/tiny_text_size"
                 android:ellipsize="end"
                 />
