--- a/app/src/main/res/layout/ddu_item.xml
+++ b/app/src/main/res/layout/ddu_item.xml
@@ -5,6 +5,7 @@
 >
     <data/>
     <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/ddu_preview_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
     >
