core dduR.inlineDdu method added, not tested

--- a/app/src/main/res/layout/mass_editor_row.xml
+++ b/app/src/main/res/layout/mass_editor_row.xml
@@ -106,6 +106,7 @@
                 android:text="@string/ellipsis"
                 android:textSize="@dimen/tiny_text_size"
                 android:ellipsize="end"
+                android:maxLines="1"
                 />
 
         <ToggleButton
