--- a/app/src/main/res/layout-w480dp/edit_circle.xml
+++ b/app/src/main/res/layout-w480dp/edit_circle.xml
@@ -59,12 +59,35 @@
             android:text="@string/ellipsis"
             android:textSize="@dimen/small_text_size"
             android:inputType="number"
-            android:digits="0123456789"
-            android:hint="rule"
+            android:digits="0123456789,"
+            android:hint="@string/edit_circle_rule_hint"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
             />
+    <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            >
+        <Button
+                android:id="@+id/inline_ddu_button"
+                android:text="@string/inline_ddu_button_description"
+                android:textSize="@dimen/small_text_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                />
+
+        <CheckBox
+                android:id="@+id/scale_and_centerize_inlined_ddu_checkbox"
+                android:text="@string/scale_and_centerize_inlined_ddu_checkbox_description"
+                android:textSize="@dimen/small_text_size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:checked="@bool/adjust_inlined_ddu"
+                />
+    </LinearLayout>
     <!--    <LinearLayout-->
     <!--            android:orientation="horizontal"-->
 <!--            android:layout_width="match_parent"-->
