--- a/app/src/main/res/layout/toolbar1.xml
+++ b/app/src/main/res/layout/toolbar1.xml
@@ -22,6 +22,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:contentDescription="@{@string/edit_button_title}"
+
+                android:visibility="gone"
                 />
         <ImageButton
                 android:id="@+id/mass_editor_button"
